@startuml foco

class Usuario

class Foco{
    - EstadoFoco estado
    + Encender()
    + Apagar()

}

class EstadoFoco
class SerieFocos{
    - Foco focos[10]
    + MostarFocos()
    + EncenderFocos()
    + ApagarFocos()
}

Usuario o-- Foco
Foco *-- EstadoFoco
EstadoFoco --|> Texto
SerieFocos "1" *-- "10" Foco
Usuario o-- SerieFocos
@enduml